--- a/src/index.html
+++ b/src/index.html
@@ -9,33 +9,35 @@
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
+<div="body-contents">
 <header class="header">
 	<div class="headertop">
 		<div class="logo"></div>
-		<icon class="header-search-icon">
-			<svg width="18" height="18" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><title>Oval 95</title><path d="M9.383 10.347c-.987.78-2.233 1.244-3.588 1.244C2.595 11.59 0 8.997 0 5.796 0 2.595 2.595 0 5.795 0c3.2 0 5.796 2.595 5.796 5.795 0 1.355-.464 2.6-1.243 3.588L15 14.036l-.964.964-4.653-4.653zm-3.588-.12c2.448 0 4.432-1.984 4.432-4.432 0-2.447-1.984-4.43-4.432-4.43-2.447 0-4.43 1.983-4.43 4.43 0 2.448 1.983 4.432 4.43 4.432z" fill="#BBB" fill-rule="evenodd"></path></svg>
-		</icon>
-		<input type="search" name="header-input-search" id="header-input-search" placeholder="Discover ...">
-		<nav class="dd-menu">
+		<div class="header--search-box">
+			<icon class="header--search-icon">
+				<svg width="18" height="18" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><title>Oval 95</title><path d="M9.383 10.347c-.987.78-2.233 1.244-3.588 1.244C2.595 11.59 0 8.997 0 5.796 0 2.595 2.595 0 5.795 0c3.2 0 5.796 2.595 5.796 5.795 0 1.355-.464 2.6-1.243 3.588L15 14.036l-.964.964-4.653-4.653zm-3.588-.12c2.448 0 4.432-1.984 4.432-4.432 0-2.447-1.984-4.43-4.432-4.43-2.447 0-4.43 1.983-4.43 4.43 0 2.448 1.983 4.432 4.43 4.432z" fill="#BBB" fill-rule="evenodd"></path></svg>
+			</icon>
+			<input type="search" name="header--input-search" id="header--input-search" placeholder="Discover your next favourite thing...">
+		</div>
+		<span class="header--dd-menu-main-btn"><svg width="20" height="4" viewBox="0 0 20 4" xmlns="http://www.w3.org/2000/svg"><path d="M2 4c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zm8 0c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2zm8 0c1.105 0 2-.895 2-2s-.895-2-2-2-2 .895-2 2 .895 2 2 2z" fill="#BBB" fill-rule="evenodd"></path></svg></span>
+		<nav class="header--dd-menu">
 			<ul class="dd-btns">
-				<li class="dd-menu-btn1"><a href="#" class="btn-link">button1</a></li>
-				<li class="dd-menu-btn2"><a href="#" class="btn-link">button2</a></li>
-				<li class="dd-menu-btn3"><a href="#" class="btn-link">button3</a></li>
+				<li class="dd-menu-btn-1"><a href="#" class="btn-link">Home</a></li>
+				<li class="dd-menu-btn-2"><a href="#" class="btn-link">Tech</a></li>
+				<li class="dd-menu-btn-3"><a href="#" class="btn-link">Games</a></li>
 			</ul>
-			<a href="#" class="btn-login">LOGIN</a>
 		</nav>
+		<a href="#" class="header--btn-login">LOGIN</a>
 	</div>
-	<hr class="header-top-rule">
 	<div class="headerbttm">
-		<nav class="mainnav">
+		<nav class="header--mainnav">
 			<ul class="main-nav-btns">
-				<li class="nav-btn1"><a href="#" class="btn-link">button1</a></li>
-				<li class="nav-btn2"><a href="#" class="btn-link">button2</a></li>
-				<li class="nav-btn3"><a href="#" class="btn-link">button3</a></li>
+				<li class="nav-btn-1 nav-btn"><a href="#" class="btn-link">Home</a></li>
+				<li class="nav-btn-2 nav-btn"><a href="#" class="btn-link">Tech</a></li>
+				<li class="nav-btn-3 nav-btn"><a href="#" class="btn-link">Games</a></li>
 			</ul>
 		</nav>
 	</div>
-	<hr class="header-bttm-rule">
 </header>
 <section class="contents">
 	<section class="subscribe">
@@ -69,5 +71,6 @@
 		</div>
 	</div>
 </section>
+</div>
 </body>
 </html>
