end of morning - off to gym - check font definition in sass.scss for welcome--msg in contents.scss

--- a/src/index.html
+++ b/src/index.html
@@ -47,34 +47,36 @@
 	<section class="welcome">
 		<span class="welcome--logo" style="font-style: normal; font-weight: normal;"><img draggable="false" class="emoji" alt="👋" src="https://twemoji.maxcdn.com/36x36/1f44b.png">
 		</span>
-		<div class="welcome--subscribe-msg">Welcome to Product Hunt
-Get the best new products in your inbox, daily.</div>
+		<span class="welcome--msg">Welcome to Product Hunt</span><span class="welcome--subscribe-msg">
+Get the best new products in your inbox, daily.</span>
 		<input type="email" name="" id="welcome--email-address" placeholder="Your email">
-		<input type="submit" value="" id="welcome--submit">SUBSCRIBE
+		<input type="submit" value="" id="welcome--submit" value="SUBSCRIBE">
 	</section>
-	<div class="column1">
-		<div class="row1-popular">
-			<div class="item1"></div>
-			<div class="item2"></div>
-			<div class="item3"></div>
+	<div class="contents--columns">
+		<div class="column1">
+			<div class="row1-popular">
+				<div class="item1"></div>
+				<div class="item2"></div>
+				<div class="item3"></div>
+			</div>
+			<div class="row2-today">
+				<div class="item1"></div>
+				<div class="item2"></div>
+				<div class="item3"></div>
+			</div>
 		</div>
-		<div class="row2-today">
-			<div class="item1"></div>
-			<div class="item2"></div>
-			<div class="item3"></div>
-		</div>
-	</div>
-	<div class="column2">
-		<div class="kitbit"><span class="title"></span><input type="submit" value=""></div>
-		<div class="livechats">
-			<ul class="chatitems">
-				<li class="item1"></li>
-				<li class="item2"></li>
-				<li class="item3"></li>
-				<li class="item4"></li>
-				<li class="item5"></li>
-				<li class="item6"></li>
-			</ul>
+		<div class="column2">
+			<div class="kitbit"><span class="title"></span><input type="submit" value=""></div>
+			<div class="livechats">
+				<ul class="chatitems">
+					<li class="item1"></li>
+					<li class="item2"></li>
+					<li class="item3"></li>
+					<li class="item4"></li>
+					<li class="item5"></li>
+					<li class="item6"></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </section>
