--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 	<title>Document</title>
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
-	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="https://assets.producthunt.com/assets/favicon-9247d7de492fd8ec2553739d3635dca4.ico">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
@@ -13,7 +13,10 @@
 <header class="header">
 	<div class="header-inner">
 	<div class="headertop">
-		<div class="logo"></div>
+		<div class="logo">
+			<span class="logoIcon_1Mp0b"><svg width="40" height="40" viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M40 20c0 11.046-8.954 20-20 20S0 31.046 0 20 8.954 0 20 0s20 8.954 20 20" fill="#DA552F"></path><path d="M22.667 20H17v-6h5.667c1.656 0 3 1.343 3 3s-1.344 3-3 3m0-10H13v20h4v-6h5.667c3.866 0 7-3.134 7-7s-3.134-7-7-7" fill="#FFF"></path></g></svg>
+			</span>
+		</div>
 		<div class="header--search-box">
 			<icon class="header--search-icon">
 				<svg width="18" height="18" viewBox="0 0 15 15" xmlns="http://www.w3.org/2000/svg"><title>Oval 95</title><path d="M9.383 10.347c-.987.78-2.233 1.244-3.588 1.244C2.595 11.59 0 8.997 0 5.796 0 2.595 2.595 0 5.795 0c3.2 0 5.796 2.595 5.796 5.795 0 1.355-.464 2.6-1.243 3.588L15 14.036l-.964.964-4.653-4.653zm-3.588-.12c2.448 0 4.432-1.984 4.432-4.432 0-2.447-1.984-4.43-4.432-4.43-2.447 0-4.43 1.983-4.43 4.43 0 2.448 1.983 4.432 4.43 4.432z" fill="#BBB" fill-rule="evenodd"></path></svg>
@@ -40,46 +43,46 @@
 			<div class="borderbottom"></div>
 		</nav>
 	</div>
-</div>
-</header>
-
-<section class="contents">
-	<section class="welcome">
-		<span class="welcome--logo" style="font-style: normal; font-weight: normal;"><img draggable="false" class="emoji" alt="👋" src="https://twemoji.maxcdn.com/36x36/1f44b.png">
-		</span>
-		<span class="welcome--msg">Welcome to Product Hunt</span><span class="welcome--subscribe-msg">
-Get the best new products in your inbox, daily.</span>
-		<input type="email" name="" id="welcome--email-address" placeholder="Your email">
-		<input type="submit" value="" id="welcome--submit" value="SUBSCRIBE">
-	</section>
-	<div class="contents--columns">
-		<div class="column1">
-			<div class="row1-popular">
-				<div class="item1"></div>
-				<div class="item2"></div>
-				<div class="item3"></div>
-			</div>
-			<div class="row2-today">
-				<div class="item1"></div>
-				<div class="item2"></div>
-				<div class="item3"></div>
-			</div>
-		</div>
-		<div class="column2">
-			<div class="kitbit"><span class="title"></span><input type="submit" value=""></div>
-			<div class="livechats">
-				<ul class="chatitems">
-					<li class="item1"></li>
-					<li class="item2"></li>
-					<li class="item3"></li>
-					<li class="item4"></li>
-					<li class="item5"></li>
-					<li class="item6"></li>
-				</ul>
-			</div>
-		</div>
 	</div>
-</section>
+</header>
+<div class="contents--container">
+	<section class="contents">
+		<section class="welcome">
+			<span class="welcome--logo" style="font-style: normal; font-weight: normal;"><img draggable="false" class="emoji" alt="👋" src="https://twemoji.maxcdn.com/36x36/1f44b.png">
+			</span>
+			<span class="welcome--msg">Welcome to Product Hunt</span><span class="welcome--subscribe-msg">
+	Get the best new products in your inbox, daily.</span>
+			<input type="email" name="" id="welcome--email-address" placeholder="Your email">
+			<input type="submit" value="" id="welcome--submit" value="SUBSCRIBE">
+		</section>
+		<div class="contents--columns">
+			<div class="column1">
+				<div class="row1-popular">
+					<div class="item1"></div>
+					<div class="item2"></div>
+					<div class="item3"></div>
+				</div>
+				<div class="row2-today">
+					<div class="item1"></div>
+					<div class="item2"></div>
+					<div class="item3"></div>
+				</div>
+			</div>
+			<div class="column2">
+				<div class="kitbit"><span class="title"></span><input type="submit" value=""></div>
+				<div class="livechats">
+					<ul class="chatitems">
+						<li class="item1"></li>
+						<li class="item2"></li>
+						<li class="item3"></li>
+						<li class="item4"></li>
+						<li class="item5"></li>
+						<li class="item6"></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
 </div>
 </body>
 </html>
